# DocuHive

./: .gitignore  README.md  pyproject.toml
DocuHive/: app.py  main.py  worker.py
DocuHive/backend_utils/: seed.py  utils.py  view_workflow.py
DocuHive/data_science/doc_data_extraction/: debug_image.py  feature_extractors.py  geometry.py  group_text.py  semantic_search.py  text_extractors.py
DocuHive/data_science/scripts/: cv_extractor.py  doc_extractor.py  movie_extractor.py
DocuHive/database/: models.py  setup_db.sql
DocuHive/graphql_routes/: data_jobs_schema.py  schema.py  tagged_data_schema.py  tagged_data_types.py
DocuHive/rest_routes/: routes.py
DocuHive/tasks/: __init__.py  task_setups.py  task_utils.py  tasks.py  workflow_utils.py
DocuHive/tasks/CPU_bound_tasks/: tasks.py
DocuHive/tasks/IO_bound_tasks/: tasks.py
DocuHive/tests/: utils.py
DocuHive/tests/DocuHive_client/: client.py
DocuHive/tests/e2e_tests/: conftest.py  output.csv  test_cv_extractor.py  test_movies_extractor.py
DocuHive/tests/script_tests/: test_cv_extractor.py  test_movies.py
DocuHive/tests/unit_tests/: test_sematic_search.py
DocuHive/trees/: example
setup_scripts/: linux_setup.sh  macos_setup.sh  sql_linux_setup.sh
